--- a/style.css
+++ b/style.css
@@ -1,10 +1,53 @@
 *{
     margin: 0%;
     padding: 0%;
+    box-sizing: border-box;
+}
+
+body{
     background-color: #33186B;
 }
 
 .wrapper{
-background-color: antiquewhite;
-margin
+    width: 80vmin;
+    padding: 50px 40px;
+    background-color: #FFD1E3;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 5px;
+    box-shadow: 0px 0px 20px black;
+}
+
+.wrapper h3{
+    display: block;
+    text-align: center;
+    font-size: 40px;
+    font-family: 'Courier New', Courier, monospace;
+    margin-bottom: 3%;
+}
+
+.wrapper p{
+    text-align: center;
+    font-size: 20px;
+    word-wrap: break-word;
+    line-height: 35px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #33186B;
+    font-weight: bold;
+    margin-bottom: 3%;
+}
+
+.wrapper button{
+    display: block;
+    background-color: #281849;
+    color: #FFD1E3;
+    border: none;
+    font-size: 25px;
+    padding: 1% 2%;
+    border-radius: 5%;
+    box-shadow: 0px 0px 20px black;
+    cursor: pointer;
+    margin: auto;
 }
